Fixed width issues on linkies page (should look nicer on mobile)

--- a/index.css
+++ b/index.css
@@ -435,6 +435,10 @@ footer p {
 }
 
 @media (max-width: 768px) {
+    .linkies-table {
+        width: 100vw;
+    }
+
     .pagination-controls {
         font-size: 1.2rem;
     }
